--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-//    buildFeatures{
-//        viewBinding = true
-//    }
+    buildFeatures{
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -52,9 +52,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.4.3'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
+    implementation 'com.airbnb.android:lottie:3.4.0'
 }
