--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,20 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppThemeNoActionBar"
         android:usesCleartextTraffic="true"
-        android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.LeaderBoard"
+            android:exported="false" />
+        <activity
+            android:name=".activities.QuizAcitvity"
+            android:exported="false" />
         <activity
             android:name=".activities.ProfileActivity"
             android:exported="false" />
@@ -24,8 +30,8 @@
             android:exported="false" />
         <activity
             android:name=".activities.utils.QuestionActivity"
-            android:theme="@style/Theme.QuizApp"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.QuizApp" />
         <activity
             android:name=".activities.SignUpActivity"
             android:exported="false" />
