--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.AdminLogin"
+            android:exported="false" />
+        <activity
+            android:name=".activities.KeyReviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.AdminActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.LeaderBoard"
             android:exported="false" />
         <activity
